RESOLVED FIXED72616
Silence a warning about control reaching the end of a non-void function
https://bugs.webkit.org/show_bug.cgi?id=72616
Summary Silence a warning about control reaching the end of a non-void function
jochen
Reported 2011-11-17 08:04:04 PST
Silence a warning about control reaching the end of a non-void function
Attachments
Patch (1.36 KB, patch)
2011-11-17 08:04 PST, jochen
no flags
jochen
Comment 1 2011-11-17 08:04:31 PST
jochen
Comment 2 2011-11-17 08:16:15 PST
Comment on attachment 115592 [details] Patch Clearing flags on attachment: 115592 Committed r100625: <http://trac.webkit.org/changeset/100625>
jochen
Comment 3 2011-11-17 08:16:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.