Silence a warning about control reaching the end of a non-void function https://bugs.webkit.org/show_bug.cgi?id=72616

Reviewed by Tony Gentilcore.

* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::verticalScrollbar):

git-svn-id: svn://svn.chromium.org/blink/trunk@100625 bbb929c8-8fbe-4397-9dbb-9b2b20218538