third_party/WebKit/Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm
@@ -1132,6 +1132,8 @@ AccessibilityUIElement AccessibilityUIElement::verticalScrollbar() const
     BEGIN_AX_OBJC_EXCEPTIONS
     return AccessibilityUIElement([m_element accessibilityAttributeValue:NSAccessibilityVerticalScrollBarAttribute]);
     END_AX_OBJC_EXCEPTIONS        
+
+    return 0;
 }
 
 JSStringRef AccessibilityUIElement::selectedTextRange()
